--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
     "axios": "^0.23.0",
     "connect-history-api-fallback": "^1.6.0",
     "core-js": "^3.6.5",
+    "nanoid": "^3.1.30",
     "normalize.css": "^8.0.1",
     "socket.io-client": "^4.2.0",
     "vue": "^2.6.11",
     "vue-router": "^3.5.2",
-    "vuex": "^3.6.2"
+    "vuex": "^3.6.2",
+    "vuex-persistedstate": "^4.1.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
