--- a/package.json
+++ b/package.json
@@ -5,15 +5,19 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "start": "node server.js",
+    "postinstall": "npm run build"
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.15.4",
     "axios": "^0.23.0",
     "connect-history-api-fallback": "^1.6.0",
     "core-js": "^3.6.5",
+    "express": "^4.17.1",
     "nanoid": "^3.1.30",
     "normalize.css": "^8.0.1",
+    "serve-static": "^1.14.1",
     "socket.io-client": "^4.2.0",
     "vue": "^2.6.11",
     "vue-router": "^3.5.2",
