--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "socket.io-client": "^4.2.0",
     "vue": "^2.6.11",
     "vue-router": "^3.5.2",
+    "vue-slick": "^1.1.16",
+    "vue-slick-carousel": "^1.0.6",
     "vue-toasted": "^1.1.28",
     "vuex": "^3.6.2",
     "vuex-persistedstate": "^4.1.0"
