--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "vue-slick": "^1.1.16",
     "vue-slick-carousel": "^1.0.6",
     "vue-toasted": "^1.1.28",
+    "vue2-touch-events": "^3.2.2",
     "vuex": "^3.6.2",
     "vuex-persistedstate": "^4.1.0"
   },
